# lib/api-spec/openapi.yaml
@@ -789,6 +789,8 @@ components:
           type: string
         photoUrl:
           type: string
+        rawPhotoUrl:
+          type: string
         level:
           type: string
           enum: [federal, state, local]
@@ -1311,6 +1313,8 @@ components:
         phone:
           type: string
         photoUrl:
+          type: string
+        rawPhotoUrl:
           type: string
         openstatesUrl:
           type: string
